waybar/style.css
@import './rose-pine.css';

* {
  padding-right: 4px;
  padding-left: 4px;
  font-family: JetbrainsMono Nerd Font;
  font-size: 14px;
  color: @text;
}

#waybar {
  background-color: transparent;
}

#workspaces button.focused {
  color: @iris;
}

#workspaces button.urgent {
  color: @rose;
}

.modules-left,
.modules-center,
.modules-right {
  margin: 4px;
  border-radius: 20px;
  background-color: @base;
}

.modules-center {
  padding: 0 10px;
}

#waybar.empty .modules-center {
  background: transparent;
}

#mpd,
#custom-media,
#tray,
#idle_inhibitor,
#pulseaudio,
#wireplumber,
#network,
#cpu,
#backlight,
#language,
#battery,
#clock {
  padding: 5px 20px;
  border-right: 1px solid @overlay;
}

#mpd.disconnected {
  color: #f53c3c;
}

#mpd.stopped {
  color: #90b1b1;
}

#mpd.paused {
  color: #51a37a;
}

#custom-media {
  min-width: 100px;
}

#tray > .passive {
  -gtk-icon-effect: dim;
}

#tray > .needs-attention {
  -gtk-icon-effect: highlight;
  color: #eb4d4b;
}

#network.disconnected {
  color: #f53c3c;
}

#cpu,
#backlight,
#battery {
  min-width: 40px;
}

#battery.charging, #battery.plugged {
  color: @foam;
}

@keyframes blink {
  to {
    background-color: @text;
    color: @base;
  }
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
  color: #f53c3c;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: steps(12);
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#clock {
  border-right: none;
}

